--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -528,7 +528,7 @@ While stage 1 of the evaluation investigated the suitability of applying a mobil
 
 As with the stage 1 investigation, a range of both qualitative \& quantitative data were collected. Evaluating participants' preferences toward different styles of transitioning between RW \& VR visual stimuli pertains to studying their reactions \& responses to ascertain the effect upon their focus of attention, a concept that is largely psychological in nature \& highly subjective~\cite{Ijsselsteijn2001}. Thus, subjective measures will produce the bulk of the data for evaluation, however they will again be backed up by objective log data to support or contradict any relationships that emerge.
 
-Stage 2 participants completed the same pre-task questionnaire as the stage 1 participants \& Likert-type questionnaires that shared certain items with that from stage 1 were also used; the stage 2.1 participants completed a 12-item questionnaire (included as appendix \ref{}), while stage 2.2 participants completed a 9-item questionnaire (included as appendix \ref{}). The SUS questionnaire was not used, while post-task interviews \& loggigng were present. In addition to the Likert-type questionnaire, all stage 2 participants also completed the igroup presence questionnaire~\cite{Schubert2001} (IPQ, included as appendix \ref{appendix-igroup-presence-questionnaire}).
+Stage 2 participants completed the same pre-task questionnaire as the stage 1 participants \& Likert-type questionnaires that shared certain items with that from stage 1 were also used; the stage 2.1 participants completed a 12-item questionnaire (included as appendix \ref{appendix-12-item-likert-type-questionnaire-stage-2-1}), while stage 2.2 participants completed a 9-item questionnaire (included as appendix \ref{appendix-9-item-likert-type-questionnaire-stage-2-2}). The SUS questionnaire was not used, while post-task interviews \& logging were present. In addition to the Likert-type questionnaire, all stage 2 participants also completed the igroup presence questionnaire~\cite{Schubert2001} (IPQ, included as appendix \ref{appendix-igroup-presence-questionnaire}).
 
 As presence does not have a single widely agreed upon definition \& those definitions that are commonly used, including that adopted by this thesis of \textit{the experience of being in one place or environment, even when one is physically situated in another} (see section \ref{lit-review-presencec}), are subjective in nature, attempts to quantify or `measure' the experience of presence are met with difficulty \& many different approaches have been adopted, some more or less suitable to certain scenarios than others. Broadly, these approaches can be categorised as either subjective (most commonly post task questionnaires), behavioural (measurement/observation of actions that do not stem from conscious thought) or physiological (heart rate, skin conductance, etc.)~\cite{Insko2003}.
 
@@ -538,23 +538,23 @@ In this categorisation system, one could consider the log data recorded by the M
 
 \subsection{Presence Questionnaires}
 
-Due to the nature of the Mirrorshades platform most established presence questionnaires could not be directly applied,  for they are predominantly written for application to `traditional' VR scenarios in which the user is immersed in a VR (or remote, in the case of telepresence) environment at the intentional exclusion of stimuli from their RW environment. Illustrated in reference to an embodied cognition framework, the sense of presence in such a scenario is argued to develop from the construction of a spatial-functional mental model of the VR environment, through a combination of representation of bodily actions as possible in the VR environment \& suppression of incompatible sensory input from the RW environment~\cite{Schubert2001}. However considering a PR scenario within the same framework, sensory input from a RW environment that features high spatial equivalence with the VR environment is not incompatible; in fact it should be considered complimentary. Whereas a traditional VR experience attempts to create in the user's mind a new spatial-functional model that exists separate to, incompatible with \& suppressing the model of their RW surroundings, PR systems should instead be considered as enhancing the user's existing model of their RW surroundings, or alternatively as creating a complementary model that sits parallel to it.
+Due to the nature of the Mirrorshades platform most established presence questionnaires could not be directly applied,  for they are predominantly written for application to `traditional' VR scenarios in which the user is immersed in a VR (or remote, in the case of telepresence) environment at the intentional exclusion of stimuli from their RW environment. Illustrated in reference to an embodied cognition framework, the sense of presence in such a scenario is argued to develop from the construction of a spatial-functional mental model of the VR environment, through a combination of representation of bodily actions as possible in the VR environment \& suppression of incompatible sensory input from the RW environment~\cite{Schubert2001}. However considering a PR scenario within the same framework, sensory input from a RW environment that features high spatial equivalence with the VR environment is not incompatible; in fact it should be considered complimentary. Whereas a traditional VR experience attempts to create in the user's mind a new spatial-functional model that exists separate to, incompatible with \& suppressing the model of their RW surroundings, PR systems should instead be considered as enhancing the user's existing model of their RW surroundings, or alternatively as creating a complementary model that sits parallel to it \& can be attended to in tandem.
 
-This distinction is perhaps best explained as a difference in the use of the term `presence', which can be visualised using the combined Milgram/Waterworth model. Established presence questionnaires assess presence in terms of the user's position upon the locus of attention axis, where `a sense of presence' means a position toward the VR extreme of the axis \& `no sense of presence' means a position toward the RW extreme of the axis. In this stage of the evaluation into the Mirrorshades PR platform however, the aim of the evaluation is to assess presence in terms of the user's position upon the focus of attention axis, to assess the severity of breaks in presence defined as deflections upon the focus of attention axis from the presence extreme in the direction of the absence extreme, representing increased cognitive load caused by performing a transition between two environments. Instead of assessing allocation of locus of attention between two \textit{incompatible} sets of environmental stimuli, this stage of evaluation hoped to assess the impact that a locus of attention oscillating between \textit{complimentary} sets of environmental stimuli has upon focus of attention.
+This distinction is perhaps best explained as a difference in the use of the term `presence', which can be visualised using the combined Milgram/Waterworth model. Established presence questionnaires assess presence in terms of the user's position upon the locus of attention axis, where `a sense of presence' means a position toward the VR extreme of the axis \& `no sense of presence' means a position toward the RW extreme of the axis. In this stage of the evaluation into the Mirrorshades PR platform however, the aim of the evaluation is to assess presence in terms of the user's position upon the focus of attention axis, to assess the severity of breaks in presence defined as deflections upon the focus of attention axis from the presence extreme in the direction of the absence extreme, representing increased cognitive load caused by performing a transition between two environments. Instead of assessing allocation of locus of attention between two \textit{incompatible} sets of environmental stimuli, this stage of evaluation hoped to assess the impact that a locus of attention oscillating between \textit{complimentary} sets of environmental stimuli has upon the participant's focus of attention.
 
 Many established presence questionnaires that feature wording \& weighting of questions associating negativity to awareness of the stimuli from the RW environment are thus unsuitable for use in assessment of a PR scenario. Whilst this approach is ideal for a traditional VR scenario in which immersion in a VR environment at the complete exclusion of the user's RW environment is the ultimate goal, it does not apply well to a PR scenario in which the ultimate goal is to imbue the user with the ability (\& desire) to transition between both RW \& VR environments, wherein maintaining an awareness of one environment while perceiving stimuli from the other is likely beneficial, rather than detrimental, to the overall experience.
 
-For example, Witmer \& Singer's presence questionnaire~\cite{Witmer1998} poses several questions that directly enquire about aspects of the virtual environment (such as \textit{``13. How involved were you in the virtual environment experience?''}) but poses no questions that pertain to the RW environment other than a single comparison between VR \& RW (\textit{``7. How much did your experiences in the virtual environment seem consistent with your real world experiences?''}, an assessment of how well bodily actions were represented as possible in the VR environment). Other questionnaires, such as that used in an experiment by Slater \& Steed in which participants walked through a VR field of trees~\cite{Slater1998}, are less extreme in their weighting toward questions only about VR, asking questions both directly about the VR environment (\textit{``Please rate your sense of being in the field among the plants''}) but also enquiring as to the RW environment in a neutral sense (\textit{``During the time of the experience, which was strongest on the whole, your sense of being in the virtual field, or of being in the real world of the laboratory?''}). However even this still permeates an `either or' implication to the two environments, emphasising their incompatibility \& separateness.
+For example, Witmer \& Singer's presence questionnaire~\cite{Witmer1998} poses several questions that directly enquire about aspects of the virtual environment (such as \textit{``13. How involved were you in the virtual environment experience?''}) but poses no questions that pertain to the RW environment other than a single comparison between VR \& RW (\textit{``7. How much did your experiences in the virtual environment seem consistent with your real world experiences?''}, an assessment touching on perceived realism \& of how well bodily actions were represented as possible in the VR environment). Other questionnaires, such as that used in an experiment by Slater \& Steed in which participants walked through a VR field of trees~\cite{Slater1998}, are less extreme in their weighting toward questions only about VR, asking questions both directly about the VR environment (\textit{``Please rate your sense of being in the field among the plants''}) but also enquiring as to the sense of being in the RW environment with a neutral tone (\textit{``During the time of the experience, which was strongest on the whole, your sense of being in the virtual field, or of being in the real world of the laboratory?''}). However even this still permeates an `either or' implication to the two environments, emphasising their incompatibility \& separateness.
 
 %=========================================================================================================
 
 \subsection{The Igroup Presence Questionnaire}
-
-The IPQ assesses presence based upon three factors; spatial presence (SP), involvement (INV) \& realness (REAL). While SP questions assess how much bodily actions are represented as possible in the VR environment \& REAL questions assess the `realness' of the VR environment by eliciting direct comparisons with the RW environment, INV questions assess suppression of incompatible sensory input from the RW environment but are not worded in a manner that presents attention paid to this sensory input as negative (or even such that these stimuli are considered incompatible), reducing risk of negative bias when the questionnaire is applied to a scenario in which attention paid to RW stimuli is encouraged.
+\label{igroup-presence-questionnaire-explanation}
+The IPQ assesses presence based upon three factors; spatial presence (SP), involvement (INV) \& realness (REAL). While SP questions assess how much bodily actions are represented as possible in the VR environment \& REAL questions assess the `realness' of the VR environment by eliciting direct comparisons with the RW environment, INV questions assess suppression of incompatible sensory input from the RW environment but are not worded in a manner that presents attention paid to this sensory input as inherently negative (or even such that these stimuli are considered incompatible), reducing risk of negative bias when the questionnaire is applied to a scenario in which attention paid to RW stimuli is encouraged.
 
 For a well implemented traditional VR experience that elicits a high sense of (virtual) presence in the user, one would expect their IPQ results to score highly in all three factors. As discussed by Constantin~\cite{Constantin2003a}, SP3 (\textit{``I did not feel present in the virtual space''}, anchored between \textit{``did not feel''} \& \textit{``felt present''}) \& INV2 (\textit{``I was not aware of my real environment''}, anchored between \textit{``fully disagree''} \& \textit{``fully agree''}) would seem to be fairly directly tied together, as a high involvement in the RW environment would intuitively reduce spatial presence by hampering the sense that bodily actions are possible in the VR environment.
 
-However, in a PR scenario that features high spatial equivalence between its constituent RW \& VR environments, this tie between SP \& INV may not demonstrate. Due to the spatial equivalence between the two environments, bodily actions in the VR environment are inherently compatible with those in the RW environment, so SP may score highly even when INV scores low, as RW sensory input isn't suppressed but in fact encouraged. In fact, it may even be the case that an inverse relationship presents between SP3 \& INV2, as heightened awareness of the RW environment leads the user to a more believable representation of bodily actions in the VR enviroonment as possible, increasing SP as (inherently possible) RW bodily actions are shared (`possible') with the VR environment. A restrained expectation would be for a PR scenario to present in general lower INV scores than the traditional scenario but without drastically reducing SP scores, whilst a more optimistic expectation would be for lower INV scores \& \textit{heightened} SP scores - that reinforcement of bodily actions within the RW environment will lead to an increase in experienced spatial presence in the VR environment.
+However, in a PR scenario that features high spatial equivalence between its constituent RW \& VR environments, this tie between SP \& INV may not demonstrate. Due to the spatial equivalence between the two environments, bodily actions in the VR environment are inherently compatible with those in the RW environment, so SP may score highly even when INV scores low, as RW sensory input isn't suppressed but in fact encouraged. In fact, it may even be the case that an inverse relationship presents between SP3 \& INV2, as heightened awareness of the RW environment leads the user to a more believable representation of bodily actions in the VR environment as possible, increasing SP as (inherently possible) RW bodily actions are shared (`possible') with the VR environment. A restrained expectation would be for a PR scenario to present in general lower INV scores than the traditional scenario but without drastically reducing SP scores, whilst a more optimistic expectation would be for lower INV scores \& \textit{heightened} SP scores - that reinforcement of bodily actions within the RW environment will lead to an increase in experienced spatial presence in the VR environment.
 
 %=========================================================================================================
 
@@ -575,9 +575,9 @@ Both stages 2.1 \& 2.2 followed a similar pattern to the stage 1 evaluation. Par
 	\item analogue selectable opacity (see section \ref{analogue-selectable-opacity}) mapped to controller right trigger \texttt{[RT]} (transition 3)
 \end{enumerate}
 
-In the first stage 2.1 scenario pressing \& holding the \texttt{[A]} button triggered a hard switch from 100\% RW to 100\% VR, pressing \& holding the \texttt{[B]} button triggered a linear interpolated switch from 100\% RW to 100\% VR \& pulling on the right trigger \texttt{[RT]} reduced the opacity of the game objects upon which the camera feeds were rendered from 100\% to an amount that mapped to the amount that the trigger was pulled (pulling the trigger all the way in would reduce the opacity of the objects to 0\% \& thus display 100\% VR, pulling the trigger 33\% would reduce the opacity of the objects by 33\% \& thus display 66\% RW \& 33\% VR, etc.). In the second stage 2.1 scenario they were granted access to the same 3x transitions via the Xbox controller \& additionally a 4th transition of the periodic hard switch (see section \ref{subsub-periodic}) was triggered every 3 seconds for a duration of 0.15 seconds. These two scenarios are referred to as `scenario 1-3' \& `scenario 1-4', respectively.
+In the first stage 2.1 scenario pressing \& holding the \texttt{[A]} button triggered a hard switch from 100\% RW to 100\% VR, pressing \& holding the \texttt{[B]} button triggered a linear interpolated switch from 100\% RW to 100\% VR \& pulling on the right trigger \texttt{[RT]} reduced the opacity of the game objects upon which the camera feeds were rendered from 100\% to an amount that mapped to the amount that the trigger was pulled (pulling the trigger all the way in would reduce the opacity of the objects to 0\% \& thus display 100\% VR, pulling the trigger 33\% would reduce the opacity of the objects by 33\% \& thus display 66\% RW \& 33\% VR, etc.). In the second stage 2.1 scenario they were granted access to the same 3x transitions via the Xbox controller \& additionally a 4th transition of the periodic hard switch (see section \ref{subsub-periodic}) was triggered every 3 seconds for a duration of 0.15 seconds (transition 4). These two scenarios are referred to as `scenario 1-3' \& `scenario 1-4', respectively.
 
-In stage 2.2, participants again performed two PR scenarios in which they walked through the RW/VR chapels, this time with only a single transition style available (the transition with linear interpolation) but with the default view set at 75\% RW/25\% VR in the first \& at 50\% RW/50\% VR in the second.
+In stage 2.2, participants again performed two PR scenarios in which they walked through the RW/VR chapels, this time with only a single transition style available (the transition with linear interpolation) but with the default view set at 75\% RW/25\% VR in the first \& at 50\% RW/50\% VR in the second. These two scenarios are referred to as `75/25 scenario' \& `50/50 scenario'.
 
 Rather than describing a path through the chapel with particular positions of interest to stop \& look around at, participants were simply told to slowly make their way from the starting position down to the altar end of the chapel. For at least one participant in the stage 1 evaluation, their exploration of the environments seemed to be subdued by their adherence to the prescribed route. In order to promote a more natural style of exploration the route description was not used in the second stage of evaluation.
 
@@ -645,7 +645,7 @@ When considering the responses to the Likert-type questionnaires (see figure \re
 
 Once again, recordings of the structured interviews were transcribed after the chapel sessions \& provided a wealth of qualitative insight into the participants' experiences with the Mirrorshades platform during the stage 2.1 evaluation.
 
-Every single participant said that they preferred scenario 1-3 over scenario 1-4. In particular, one participant  reported that each time scenario 1-4 triggered an automatic transition (transition 4), s/he had to stop to regain their bearings, with another reporting that each transition 4 meant having to having to \textit{``stop \& work it out again''}. Several participants noted that they felt more `in control' during scenario 1-3 than during scenario 1-4. Transition 4 was reported as being particularly off-putting when inaccuracy in the IPS had placed the virtual vantage at a position notably different to the participant's real position, especially when this resulted in virtual \& real positions being on opposite sides of a wall.
+Every single participant said that they preferred scenario 1-3 over scenario 1-4. In particular, one participant  reported that each time scenario 1-4 triggered an automatic transition (transition 4), s/he had to stop to regain their bearings, with another reporting that each transition 4 meant having to \textit{``stop \& work it out again''}. Several participants noted that they felt more `in control' during scenario 1-3 than during scenario 1-4. Transition 4 was reported as being particularly off-putting when inaccuracy in the IPS had placed the virtual vantage at a position notably different to the participant's real position, especially when this resulted in virtual \& real positions being on opposite sides of a wall.
 
 Roughly half of the participants said that scenario 1-3 was more engaging, another found the scenarios roughly similar with regards to engagement \& 2x found scenario 1-4 to be more engaging although they mentioned that they suspected this could simply have been down to increased familiarity with the system. Several participants said that transition 4 was `unexpected', leading to a less `consistent' experience.
 
@@ -668,9 +668,9 @@ Log data were recorded during all scenarios, however these data were not recorde
 
 %=====================
 
-\subsubsection{Comparing traditional \& PR scenarios}
+\subsubsection{Considering all scenarios (traditional \& PR)}
 
-For all participants there was again substantially more yaw change than pitch change, in both traditional \& PR scenarios. Figure \ref{2-1-8-pitch-yaw-trad-1-3-1-4.png} shows this relationship by plotting pitch \& yaw against time for participant 8 for all three scenarios (traditional at left, scenario 1-3 in the middle \& scenario 1-4 at right) \& the standard deviations for all participants across all three scenarios is given by tables \ref{2-1-sd-trad}, \ref{2-1-sd-1-3} \& \ref{2-1-sd-1-4}.
+For all participants there was again substantially more yaw change than pitch change, in both traditional \& PR scenarios. Figure \ref{2-1-8-pitch-yaw-trad-1-3-1-4.png} shows this relationship by plotting pitch \& yaw against time for participant 8 for all three scenarios (traditional at left, scenario 1-3 in the middle \& scenario 1-4 at right) \& the standard deviations for pitch \& yaw for all participants across all three scenarios is given by tables \ref{2-1-sd-trad}, \ref{2-1-sd-1-3} \& \ref{2-1-sd-1-4}.
 
 \begin{figure}[h]
 	\begin{center}
@@ -815,13 +815,11 @@ For all participants there was again substantially more yaw change than pitch ch
 \end{center}
 \end{table}
 
-\textbf{Can't really compare between traditional \& PR, however for what we do have of traditional they exhibit this more yaw than pitch relationship. This is the same as for stage 1.}
-
 %=====================
 
 \subsubsection{Comparing RW \& VR periods within PR scenarios}
 
-When comparing pitch \& yaw data between the RW \& VR periods within the two PR scenarios, five out of the seven participants displayed greater change in yaw when perceiving VR stimuli than when perceiving RW stimuli for both scenario 1-3 \& scenario 1-4. Figure \ref{8-1-3-pitch-yaw.png} illustrates this relationship for participant 8 undertaking scenario 1-3 while figure \ref{12-1-4-pitch-yaw.png} illustrates the relationship for participant 12 undertaking scenario 1-4.
+When comparing pitch \& yaw data between the RW \& VR periods within the two PR scenarios, five out of the seven participants displayed greater variance in yaw when perceiving VR stimuli than when perceiving RW stimuli for both scenario 1-3 \& scenario 1-4. Figure \ref{8-1-3-pitch-yaw.png} illustrates this relationship for participant 8 undertaking scenario 1-3 while figure \ref{12-1-4-pitch-yaw.png} illustrates the relationship for participant 12 undertaking scenario 1-4. Again the background colouring of the plots represents whether the participant was perceiving RW or VR visual stimuli at a particular time index, using different colours to indicate which transition style was used; pink for transition 1, green for transition 2, yellow for transition 3 \& dark blue for transition 4.
 
 \begin{figure}[h]
 	\begin{center}
@@ -847,9 +845,7 @@ When comparing pitch \& yaw data between the RW \& VR periods within the two PR 
 	\end{center}
 \end{figure}
 
-\textbf{Difference between yaw change in real \& virtual greater in 1-4 than in 1-3, though this could be familiarity.}
-
-When comparing head movement, as mean standard deviation weighted by duration of the periods, between the RW \& VR portions of the PR scenarios, for most participants there is larger change in yaw during VR periods than RW periods of scenario 1-3 (see table \ref{mean-sd-yaw-1-3}), however the difference is not great. When considering the same criteria for scenario 1-4 (see table \ref{mean-sd-yaw-1-4}) however, all participants display greater change in yaw during VR periods, most quite substantially so. At the same time, all participants in scenario 1-4 showed less change in yaw in the RW periods than in the RW periods of scenrio 1-3. Whilst this apparent increased comfort with larger head movements in VR could be explained due to familiarity, the magnitude of the difference between scenario 1-3 \& scenario 1-4 makes it hard to believe that familiarity is the sole reason. \textbf{And because scenario 1-4 is not really that different to 1-3 (it's just the addition of the automatic switch).}
+When comparing head movement as mean standard deviation weighted by duration of the periods (tables \ref{mean-sd-yaw-1-3} \& \ref{mean-sd-yaw-1-4}) between the RW \& VR portions of the two PR scenarios, this relationship is seen much more substantially in scenario 1-4. Part of this is due to the fact that all participants in scenario 1-4 showed less change in yaw in the RW periods than in the RW periods of scenario 1-3. Whilst this apparent increased comfort with larger head movements in VR in scenario 1-4 could be explained due to familiarity, the magnitude of the difference between scenario 1-3 \& scenario 1-4 makes it hard to believe that familiarity is the sole reason, especially considering that scenario 1-4 was not a drastically different experience to scenario 1-3 as only the addition of transition 4 differentiated it from scenario 1-3.
 
 \begin{table}
 \begin{center}
@@ -941,12 +937,6 @@ When comparing head movement, as mean standard deviation weighted by duration of
 
 %=====================
 
-\subsubsection{Other}
-
-Looking at individual participants in more detail leads to some interesting observations.
-
-%=====================
-
 \subsubsection{Experimenting With Transition Styles}
 
 Some participants showed an understandable behaviour where they `tried out' the different transition styles before adopting one that they then used predominantly throughout the rest of the scenario. Participant 11 showed this behaviour in its most extreme case during scenario 1-3, when s/he tried each transition style once at the very beginning of the scenario \& then only used transition 3 (via the right trigger \texttt{[RT]}) throughout the rest of the scenario (figure \ref{11-pitch-yaw-1-3.png}). However when s/he came to perform scenario 1-4, s/he seemed to take this opportunity as a second chance to experiment with all of the different transition styles, using transitions 1, 2 \& 3 at different points throughout the scenario (figure \ref{11-pitch-yaw-1-4.png}).
@@ -1032,42 +1022,159 @@ Confirming responses during the post task interviews, several participants did m
 \end{figure}
 
 %=====================
-
-
-
-
-
-
-
-Time spent in virtual
-	participant 8 - more time spent in VR in 1-4 to avoid the automatic switch
-	participant 9 - more time spent in VR because of better understanding what they were meant to be doing (familiarity)
 	
-Other
-	participant 12 - all big head movements in 1-4 were in VR, but in 1-3 there was RW head movement too?
+%Other
+%	participant 12 - all big head movements in 1-4 were in VR, but in 1-3 there was RW head movement too?
 
 
-Number of transitions in each session ranged from high teens to low sixties.
+%Number of transitions in each session ranged from high teens to low sixties.
 
-Mean times spent in real/virtual are much closer than in stage 1.
+%Mean times spent in real/virtual are much closer than in stage 1.
+%Time spent in virtual
+%	participant 8 - more time spent in VR in 1-4 to avoid the automatic switch
+%	participant 9 - more time spent in VR because of better understanding what they were meant to be doing (familiarity)
 
-four of seven participants spent more time in real than virtual in both 1-3 \& 1-4
-	for three participants the ratio was closer in 1-4 than in 1-3
-	one spent more time in virtual than real in both 1-3 \& 1-4
-	one spent more time in real in 1-3 \& then more time in virtual tin 1-4 (familiarity?)
+
+%four of seven participants spent more time in real than virtual in both 1-3 \& 1-4
+%	for three participants the ratio was closer in 1-4 than in 1-3 (avoiding transition 4?)
+%	one spent more time in virtual than real in both 1-3 \& 1-4
+%	one spent more time in real in 1-3 \& then more time in virtual tin 1-4 (familiarity?)
 
 %=========================================================================================================
 
 \subsection{IPQ}
 
+IPQ results were scaled from the -3 to +3 range used by the questionnaires to the 0 to 6 range used to express results herein. The reversed items (SP2, INV3 \& REAL1) had their results appropriately reversed. Tables \ref{sp-2-1-table}, \ref{inv-2-1-table} \& \ref{real-2-1-table} show the mean \& standard deviation for SP, INV \& REAL respectively for the all of the scenarios (traditional scenario, scenario 1-3 \& sceiaron 1-4).
 
-%=========================================================================================================
+The traditional scenario produced baseline IPQ results for a traditional HMD based VR experience in which RW stimuli are suppressed from the user. SP \& INV results for this traditional scenario were relatively high, while the REAL results were low; this is not surprising, as the graphical quality of the VR chapel reconstruction used throughout the Mirrorshades evaluation was not stellar, partly as a result of having to intentionally reduce the level of detail in order to maintain acceptable framerates throughout the evaluations, thus it should come as no surprise that even though participants perceived bodily actions to be possible within the VR environment (high SP) \& found incompatible RW stimuli well suppressed (high INV) that the realness of the VR environment was nonetheless lacking (low REAL). As one participant said during their interview, it felt real even though it didn't look it - \textit{``\ldots obviously it wasn't the same quality, but I still felt so immersed in it. Even though part of me would've known it wasn't real, most of it felt real even though it didn't look like it''}.
 
+In both PR scenarios SP \& REAL were reduced equally by a small amount, whilst INV was reduced more substantially \& with greater reduction for scenario 1-4 than for scenario 1-3. This meets the hypothesis that a positive PR experience would result in noticeably reduced INV but without substantial reduction in SP \& REAL. The reduced INV indicates that participants were more aware of RW stimuli, but the only marginally reduced SP indicates that their sense of presence in the VR environment did not drastically suffer \& the only marginally reduced REAL indicates that the perceived realness of the VR environment did not substantially suffer from tandem observation with the equivalent vantage points into the (necessarily real) RW environment, although the PR effect was evidently not positive enough to elicit heightened overall SP results as was hypothesized might happen.
 
+Looking specifically at the results for SP3 \& INV2 (table \ref{sp3-inv2-2-1-table}), they seem to be tied together as per Constantin's observation (see section \ref{igroup-presence-questionnaire-explanation}) for the traditional scenario \& scenario 1-3 where they fall equally. However in scenario 1-4, INV2 drops substantially more than SP3 which climbs to above its level in scenario 1-3. This lends support to the notion that in a PR experience in which the user is encouraged (or forced, in the case of scenario 1-4 which featured transition 4) to view visual stimuli from two compatible environments that SP can be maintained, that the break in presence associated with a transition from one environment to the other is no so great as to effect a Gestalt switch \& throw off perceptual/concrete processing to an extent that sense of presence (in terms of focus of atttention) is drastically reduced.
+
+\begin{table}
+\begin{center}
+\begin{minipage}[t]{.47\linewidth}
+\begin{center}
+\begin{tabular}{|c|c|c|}
+\hline
+
+\textbf{Scenario} & \textbf{Mean} & \textbf{Standard deviation} \\
+
+\hline
+
+traditional & 4.6 & 0.780 \\
+
+\hline
+
+1-3 & 4.133 & 1.093 \\
+
+\hline
+
+1-4 & 4.133 & 0.532 \\
+
+\hline
+\end{tabular}
+\caption{Means \& standard deviations of SP for all stage 2.1 scenarios.}
+\label{sp-2-1-table}
+\end{center}
+\end{minipage}
+%
+\begin{minipage}[t]{.47\linewidth}
+\begin{center}
+\begin{tabular}{|c|c|c|}
+\hline
+
+\textbf{Scenario} & \textbf{Mean} & \textbf{Standard deviation} \\
+
+\hline
+
+traditional & 4.166 & 1.393 \\
+
+\hline
+
+1-3 & 2.666 & 1.125 \\
+
+\hline
+
+1-4 & 1.958 & 1.308 \\
+
+\hline
+\end{tabular}
+\caption{Means \& standard deviations of INV for all stage 2.1 scenarios.}
+\label{inv-2-1-table}
+\end{center}
+\end{minipage}
+%\end{center}
+%\end{table}
+
+%\begin{table}
+%\begin{center}
+\begin{minipage}[t]{.47\linewidth}
+\begin{center}
+\begin{tabular}{|c|c|c|}
+\hline
+
+\textbf{Scenario} & \textbf{Mean} & \textbf{Standard deviation} \\
+
+\hline
+
+traditional & 2.208 & 1.134 \\
+
+\hline
+
+1-3 & 1.917 & 1.339 \\
+
+\hline
+
+1-4 & 1.917 & 1.080 \\
+
+\hline
+\end{tabular}
+\caption{Means \& standard deviations of REAL for all stage 2.1 scenarios.}
+\label{real-2-1-table}
+\end{center}
+\end{minipage}
+%
+\begin{minipage}[t]{.47\linewidth}
+\begin{center}
+\begin{tabular}{|c|c|c|}
+\hline
+
+\textbf{Scenario} & \textbf{Mean SP3} & \textbf{Mean INV2} \\
+
+\hline
+
+traditional & 4.5 & 4 \\
+
+\hline
+
+1-3 & 2.5 & 2.8 \\
+
+\hline
+
+1-4 & 3.5 & 1 \\
+
+\hline
+\end{tabular}
+\caption{Means for SP3 \& INV2 for all stage 2.1 scenarios.}
+\label{sp3-inv2-2-1-table}
+\end{center}
+\end{minipage}
+\end{center}
+\end{table}
 
 %=========================================================================================================
 
 \section{Stage 2.1 Conclusions}
+
+Participants overwhelmingly preferred transition 3 compared to the others, which was somewhat surprising as initial experiments with the Mirrorshades platform with members of the OVW research group strongly indicated preference toward transition 2. With the larger number of participants in this stage of evaluation compared to the unscientific tests within the OVW group, this preference toward transition 3 should be considered legitimate even though unexpected. Reasoning for preference toward transition 3 included being able to see both environments at once \& a heightened sense of control.
+
+Transition 4 was unanimously negatively received in terms of overall comfort \& enjoyment of the scenarios, however participants did comment on heightened awareness \& understanding between the two environments when transition 4 was present. Comments from participants concerning transition 4 such as that each time it occurred they would need to \textit{``stop \& work it out again''} directly supports the notion that transition 4 results in a larger break in presence, in terms of movement on the focus of attention axis from presence toward absence, than the the other transition styles, with `working it out' alluding to the notion of conceptual/abstract reasoning that sits opposite perceptual/concrete processing at the two ends of the balance of focus of attention.
+
+The same relationships with head movement as seen in stage 1 returned for stage 2.1, with substantially more variance in yaw than pitch across all scenarios, more variance in head movement when perceiving VR than RW during the PR scenarios \& more variance in head movement while standing stationary than when walking during the PR scenarios.
+
+IPQ results met hypotheses, with the traditional scenario scoring highly in both SP \& INV while scoring lowly in REAL (explained by the low visual quality of the VR model) \& the PR scenarios only marginally reducing SP \& REAL while more substantially reducing INV. Of particular interest is that scenario 1-4 displayed a substantial gap between SP3 \& INV2, whereas with scenario 1-3 these values were reduced more evenly from their traditional scenario baseline. These IPQ results indicate that the PR scenarios undertaken by stage 2.1 participants succeed in allowing participants to experience the RW environment in tandem with the VR environment, without having a substantial negative effect upon their sense of presence in the VR environment or upon the perceived realism of the VR environment.
 
 %=========================================================================================================
 
