--- a/thesis.tex
+++ b/thesis.tex
@@ -221,6 +221,14 @@
 \includepdf[pages={1-4}]{06_mirrorshades_studies_results/PDFs/igroup-presence-questionnaire.pdf}
 \label{appendix-igroup-presence-questionnaire}
 
+\chapter{Stage 2.1 12-item Likert-type Questionnaire}
+\includepdf[pages={1}]{06_mirrorshades_studies_results/PDFs/12-item-likert-type-questionnaire-stage-2-1.pdf}
+\label{appendix-12-item-likert-type-questionnaire-stage-2-1}
+
+\chapter{Stage 2.2 9-item Likert-type Questionnaire}
+\includepdf[pages={1}]{06_mirrorshades_studies_results/PDFs/9-item-likert-type-questionnaire-stage-2-2.pdf}
+\label{appendix-9-item-likert-type-questionnaire-stage-2-2}
+
 \end{appendices}
 
 % ======= ======= ======= ======= ======= ======= =======
